--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 	<header class="header relative border-bottom">
 		<div class="logo">
 			<div class="wrap center-block">
-				<figure class="image isotipo">
-					<img src="img/logo.png" alt="Sfotipy">
+				<figure class="imageLogo isotipo">
+					<img src="img/logo.png" width="100%" alt="Sfotipy">
 				</figure>
 				<!-- Seccion Avatar/Usuario -->
 				<div class="user right">
@@ -90,9 +90,9 @@
 				</div>
 				<!-- Controles de reproduccion -->
 				<div class="play center-text padding-tb">
-					<a href="" class="action gray icon-prev"></a>
-					<a href="" class="action gray icon-play"></a>
-					<a href="" class="action gray icon-next"></a>
+					<a href="" class="action gray icon-prev" id="prev"></a>
+					<a href="" class="action gray icon-play" id="play"></a>
+					<a href="" class="action gray icon-next" id="next"></a>
 					<a href="" class="action gray icon-random"></a>
 					<a href="" class="action gray icon-vol"></a>
 				</div>
@@ -173,96 +173,22 @@
 		</div>
 	</section>
 	<!-- Seccion lista Top Hits -->
-	<section class="container">
-		<article class="song">
-			<figure class="image">
-				<img src="img/songs/test.jpg" width="128" height="128" alt="Girl - Pharell Williams">
-				<p class="name">Girl</p>
-				<p class="author">Pharell Williams</p>
-			</figure>
-		</article>
-		<article class="song">
-			<figure class="image">
-				<img src="img/songs/test.jpg" width="128" height="128" alt="Girl - Pharell Williams">
-				<p class="name">Girl</p>
-				<p class="author">Pharell Williams</p>
-			</figure>
-		</article>
-		<article class="song">
-			<figure class="image">
-				<img src="img/songs/test.jpg" width="128" height="128" alt="Girl - Pharell Williams">
-				<p class="name">Girl</p>
-				<p class="author">Pharell Williams</p>
-			</figure>
-		</article>
-		<article class="song">
-			<figure class="image">
-				<img src="img/songs/test.jpg" width="128" height="128" alt="Girl - Pharell Williams">
-				<p class="name">Girl</p>
-				<p class="author">Pharell Williams</p>
-			</figure>
-		</article>
-		<article class="song">
-			<figure class="image">
-				<img src="img/songs/test.jpg" width="128" height="128" alt="Girl - Pharell Williams">
-				<p class="name">Girl</p>
-				<p class="author">Pharell Williams</p>
-			</figure>
-		</article>
-		<article class="song">
-			<figure class="image">
-				<img src="img/songs/test.jpg" width="128" height="128" alt="Girl - Pharell Williams">
-				<p class="name">Girl</p>
-				<p class="author">Pharell Williams</p>
-			</figure>
-		</article>
-		<article class="song">
-			<figure class="image">
-				<img src="img/songs/test.jpg" width="128" height="128" alt="Girl - Pharell Williams">
-				<p class="name">Girl</p>
-				<p class="author">Pharell Williams</p>
-			</figure>
-		</article>
-		<article class="song">
-			<figure class="image">
-				<img src="img/songs/test.jpg" width="128" height="128" alt="Girl - Pharell Williams">
-				<p class="name">Girl</p>
-				<p class="author">Pharell Williams</p>
-			</figure>
-		</article>
-		<article class="song">
-			<figure class="image">
-				<img src="img/songs/test.jpg" width="128" height="128" alt="Girl - Pharell Williams">
-				<p class="name">Girl</p>
-				<p class="author">Pharell Williams</p>
-			</figure>
-		</article>
-		<article class="song">
-			<figure class="image">
-				<img src="img/songs/test.jpg" width="128" height="128" alt="Girl - Pharell Williams">
-				<p class="name">Girl</p>
-				<p class="author">Pharell Williams</p>
-			</figure>
-		</article>
-		<article class="song">
-			<figure class="image">
-				<img src="img/songs/test.jpg" width="128" height="128" alt="Girl - Pharell Williams">
-				<p class="name">Girl</p>
-				<p class="author">Pharell Williams</p>
-			</figure>
-		</article>
-		<article class="song">
-			<figure class="image">
-				<img src="img/songs/test.jpg" width="128" height="128" alt="Girl - Pharell Williams">
-				<p class="name">Girl</p>
-				<p class="author">Pharell Williams</p>
-			</figure>
-		</article>
+	<section class="container" id="song-list">
+		<script type="html/x-handlebars" id="song-tmpl">
+			{{#each songs}}
+			<article class="song" data-id="{{@index}}">
+				<figure class="cover">
+					<img src="{{img}}" width="128" height="128" alt="{{name}} - {{artist}}">
+					<p class="name">{{name}}</p>
+					<p class="author">{{artist}}</p>
+				</figure>
+			</article>
+			{{/each}}
+		</script>
 	</section>
+	<script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+	<script src="js/lib/handlebars.js"></script>
+	<script src="js/lib/observable.js"></script>
+	<script src="js/player-mvc.js"></script>
 </body>
 </html>
-
-
-
-
-
